# graphify-core

./: .gitignore  AGENTS.md  Cargo.toml  README.md
assets/: .gitignore
assets/skills/: skill-aider.md  skill-claw.md  skill-codex.md  skill-copilot.md  skill-droid.md  skill-kiro.md  skill-opencode.md  skill-trae.md  skill-vscode.md  skill-windows.md  skill.md
scripts/: parity_benchmark.py  parity_report_clawed_code.md
src/: binary_schema.rs  build.rs  cache.rs  cli.rs  clone.rs  detect.rs  extract.rs  ingest.rs  layout.rs  lib.rs  main.rs  memory.rs  pipeline.rs  query.rs  schema.rs  semantic.rs  serve.rs  setup.rs  test_binary.rs  test_leiden.rs  timeutil.rs  transcribe.rs  validate.rs  viewer.rs
