[package]
name = "graphify-core"
version = "0.1.0"
edition = "2024"
description = "Core graph building engine for graphify — AST extraction, graph construction, and analysis"
autobins = false

[lib]
name = "graphify_core"
path = "src/lib.rs"

[[bin]]
name = "graphify-core"
path = "src/main.rs"

[[bin]]
name = "graphify"
path = "src/cli.rs"

[[bin]]
name = "test-leiden"
path = "src/test_leiden.rs"

[[bin]]
name = "test-binary"
path = "src/test_binary.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ignore = "0.4"
rayon = "1.8"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
globset = "0.4"
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-scala = "0.25"
tree-sitter-php = "0.24"
tree-sitter-lua = "0.5"
tree-sitter-swift = "0.7"
tree-sitter-zig = "1.1"
tree-sitter-elixir = "0.3"
tree-sitter-julia = "0.23"
tree-sitter-objc = "3.0"
tree-sitter-powershell = "0.26"
tree-sitter-verilog = "1.0"
tree-sitter-dart = "0.1.0"
rustworkx-core = { path = "../rustworkx/rustworkx-core" }
regex = "1.12.3"
pdf-extract = "0.10.0"
docx-lite = "0.2.0"
calamine = "0.34.0"
bincode = { version = "2", features = ["serde"] }

